@@ -7,7 +7,9 @@
 	* doc/gramps.1: Likewise. 
 	* NEWS: Likewise. 
 	* TODO: Add recently discussed items from gramps-devel.  
-	* gramps.sh.in: Fix bashism to have a valid bourn-shell script. 
+	* gramps.sh.in: Fix bashism to have a valid bourne-shell script. 
+	* src/plugins/Makefile.am: Ship writefree.glade.
+	* src/plugins/Makefile.in: Likewise.
 
 2003-09-14  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/SourceView.py (button_press,on_add_clicked,on_delete_clicked,
